--- a/src/containers/SellerFinder/SellerDetails/index.scss
+++ b/src/containers/SellerFinder/SellerDetails/index.scss
@@ -103,13 +103,13 @@ $darkgary: #dfe8f329;
           }
 
           > .rst__lineBlock:nth-child(2)::before {
-            top: 63.8% !important;
+            top: 63.9% !important;
             width: 100% !important;
             left: 15% !important;
           }
 
           > .rst__lineBlock:nth-child(2)::after {
-            height: 61% !important;
+            height: 63.3% !important;
             left: 15% !important;
             top: 10px;
           }
